--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -1,12 +1,7 @@
 <div class="container">
     <h1>Contact Info</h1>
     <div class="row">
-        <app-details 
-            [name]="name" 
-            [team]="team" 
-            [joinedAt]="joinedAt"
-            [avatar]="avatar"
-        ></app-details>
+        <app-details></app-details>
     </div>
     <div class="row">
         <app-projects-table></app-projects-table>
